# augur-cli

./: .gitignore  README.md  online-installer.sh
augur-cli/: .gitattributes  .gitignore  Cargo.toml  cargo-build-quiet.sh  cargo-test-quiet.sh  html-build-site.sh  html-serve-site.sh  install.sh  launch-dev.sh  launch-release.sh  launch.sh
augur-cli/.github/: AGENTS.md  MAIN_PROMPT.md  PROMPT.md  TASK_PROMPT.md  copilot-instructions.md  plan_execution.yml  routing.md
augur-cli/.github/agents/: 0-external-code-actor-ops-detector.agent.md  0-external-code-rustc-dependency-check.agent.md  0-external-code-src-deadcode-analysis.agent.md  0-external-code-stub-detector.agent.md  0-external-code-tool-analyst.agent.md  0-global-code-reviewer.agent.md  0-global-customization-author.agent.md  0-global-customization-reviewer.agent.md  0-global-git-operator.agent.md  0-global-pipeline-orchestrator.agent.md  0-global-session-resume-orchestrator.agent.md  0-global-triage-failure.agent.md  0-global-writer-changelog.agent.md  0-utility-code-newtype-migrator.agent.md  0-utility-code-refactorer.agent.md  0-utility-code-rust-implementer.agent.md  0-utility-doc-author.agent.md  0-utility-question-answering.agent.md  0-utility-quick-patch-code.agent.md  0-utility-quick-patch-design.agent.md  0-utility-quick-patch-plan.agent.md  0-utility-quick-patch-tests.agent.md  0-utility-topology-extractor.agent.md  1-design-00-orchestrator.agent.md  1-design-01-requirements-builder.agent.md  1-design-02-requirements-reviewer.agent.md  1-design-03-features-builder.agent.md  1-design-04-features-reviewer.agent.md  1-design-05-behavior-builder.agent.md  1-design-06-behavior-reviewer.agent.md  2-plan-00-orchestrator.agent.md  2-plan-01-domain-designer.agent.md  2-plan-02-domain-reviewer.agent.md  2-plan-03-dependency-designer.agent.md  2-plan-04-dependency-plan-evaluator.agent.md  2-plan-05-function-sig-planner.agent.md  2-plan-06-function-sig-reviewer.agent.md  2-plan-07-behavior-planner.agent.md  2-plan-08-behavior-plan-reviewer.agent.md  2-plan-09-test-planner.agent.md  (+25 more)
augur-cli/.github/instructions/: critical-rules.instructions.md  rust.instructions.md
augur-cli/.github/local/: directories.md  language-companions.md  plan_execution.yml  rules.md
augur-cli/.github/prompts/: add-actor.prompt.md  add-agent.prompt.md  add-domain-type.prompt.md  add-instructions.prompt.md  add-prompt.prompt.md  add-skill.prompt.md  add-tool.prompt.md  architecture-audit.prompt.md  build-plan.prompt.md  changelog-author.prompt.md  code-audit-rust.prompt.md  create-commit.prompt.md  execute-plan.prompt.md  init-local.prompt.md  pr-description.prompt.md  review-customization.prompt.md  review-implementation.prompt.md  run-plan.prompt.md  standards-check.prompt.md
augur-cli/.github/skills/0-external-actor-ops-detector/: SKILL.md  run.sh
augur-cli/.github/skills/0-external-arch-linter/: SKILL.md  arch-linter  run.sh
augur-cli/.github/skills/0-external-cargo-diagnostics/: SKILL.md  cargo-diagnostics  run.sh
augur-cli/.github/skills/0-external-codebase-probe/: SKILL.md  run.sh
augur-cli/.github/skills/0-external-consolidator/: SKILL.md  run.sh
augur-cli/.github/skills/0-external-customization-analyzer/: SKILL.md  customization-analyzer  run.sh
augur-cli/.github/skills/0-external-dependency-intel/: SKILL.md  dependency-intel  run.sh
augur-cli/.github/skills/0-external-doc-extractor/: SKILL.md  doc-extractor  run-full.sh  run-index.sh  run-summary.sh  run.sh
augur-cli/.github/skills/0-external-module-graph/: SKILL.md  module-graph  run.sh
augur-cli/.github/skills/0-external-orch-query/: SKILL.md  orch-query  run.sh
augur-cli/.github/skills/0-external-rustc-dependency-check/: SKILL.md  run.sh  rustc-dependency-check
augur-cli/configs/: application.secrets.template.yaml  application.yaml
augur-cli/configs/providers/: anthropic.yaml  copilot.yaml  ollama.yaml  openai.yaml  openrouter.yaml
augur-cli/crates/augur-app/: Cargo.toml
augur-cli/crates/augur-core/: Cargo.toml
augur-cli/crates/augur-domain/: Cargo.toml
augur-cli/crates/augur-graph-builder/: Cargo.toml
augur-cli/crates/augur-integration-tests/: Cargo.toml
augur-cli/crates/augur-provider-anthropic/: Cargo.toml
augur-cli/crates/augur-provider-copilot-sdk/: Cargo.toml  build.rs
augur-cli/crates/augur-provider-ollama/: Cargo.toml
augur-cli/crates/augur-provider-openai/: Cargo.toml
augur-cli/crates/augur-provider-openrouter/: Cargo.toml
augur-cli/crates/augur-provider-shared/: Cargo.toml
augur-cli/crates/augur-tui/: Cargo.toml
augur-cli/docs/: INSTALL.md  README.md  structure.md
augur-cli/docs/app/: README.md  actors.docs.md  crate-overview.docs.md  wiring.docs.md
augur-cli/docs/core/: README.md  actors.docs.md  config.docs.md  crate-overview.docs.md  domain.docs.md  helpers.docs.md  macros.docs.md  persistence.docs.md  plan_store.docs.md  token_history.docs.md  tools.docs.md
augur-cli/docs/domain/: README.md  actors.docs.md  config.docs.md  crate-overview.docs.md  domain.docs.md  persistence.docs.md  tools.docs.md
augur-cli/docs/provider-anthropic/: README.md  crate-overview.docs.md
augur-cli/docs/provider-copilot-sdk/: README.md  actors.docs.md  crate-overview.docs.md  guided_plan.docs.md  shared.docs.md
augur-cli/docs/provider-ollama/: README.md  crate-overview.docs.md
augur-cli/docs/provider-openai/: README.md  crate-overview.docs.md
augur-cli/docs/provider-openrouter/: README.md  actors.docs.md  compaction.docs.md  crate-overview.docs.md  model_config.docs.md
augur-cli/docs/provider-shared/: README.md  anthropic.docs.md  crate-overview.docs.md  ollama.docs.md  openai.docs.md  request_context.docs.md  retry.docs.md  streaming.docs.md
augur-cli/docs/tui/: README.md  actors.docs.md  crate-overview.docs.md  domain.docs.md  tui.docs.md
augur-cli/public-html/: index.html
augur-cli/public-html/css/: base.css  sidebar.css  status.css
augur-cli/public-html/js/: cytoscape-init.js  cytoscape-styles.js  elements.js  helpers.js  layout.js  loader.js  navigation.js  sidebar.js  state.js
(+903 files in other folders)
