[package]
name = "augur-app"
version = "7.0.0"
edition = "2024"
autotests = false

[lib]
name = "augur_cli"
path = "src/lib.rs"

[[bin]]
name = "augur-cli"
path = "src/main.rs"

[dependencies]
augur-core = { path = "../augur-core" }
augur-domain = { path = "../augur-domain" }
augur-provider-openrouter = { path = "../augur-provider-openrouter" }
augur-provider-copilot-sdk = { path = "../augur-provider-copilot-sdk" }
augur-tui = { path = "../augur-tui" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
bon = "3.9.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
augur-core = { path = "../augur-core" }
augur-domain = { path = "../augur-domain" }
serde_json = "1"
ratatui = "0.30"

[[test]]
name = "provider_tests"
path = "tests/provider.tests.rs"

[[test]]
name = "wiring_tests"
path = "tests/wiring.tests.rs"
