[package]
name = "augur-provider-copilot-sdk"
version = "5.1.0"
edition = "2024"
autotests = false

[[test]]
name = "actors_tests"
path = "tests/actors/mod.tests.rs"

[[test]]
name = "guided_plan_tests"
path = "tests/guided_plan/mod.tests.rs"

[[test]]
name = "shared_tests"
path = "tests/shared/mod.tests.rs"

[dependencies]
augur-domain = { path = "../augur-domain" }
augur-provider-shared = { path = "../augur-provider-shared" }
copilot-sdk = { git = "https://github.com/Kenneth-Posey/copilot-sdk-rust", branch = "main" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
bon = "3.9.1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
augur-domain = { path = "../augur-domain" }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
